--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "alert": "^5.1.1",
     "body-parser": "^1.20.1",
+    "connect-ensure-login": "^0.1.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
@@ -18,6 +19,7 @@
     "mongoose": "^6.7.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nocache": "^3.0.4",
     "popups": "^1.1.3"
   }
 }
